--- a/Solution/GGzApplicatie/GGzApplicatie/Views/RegisterPage.xaml
+++ b/Solution/GGzApplicatie/GGzApplicatie/Views/RegisterPage.xaml
@@ -1,38 +1,30 @@
 ﻿<Page
-    x:Class="GGzApplicatie.Register"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:GGzApplicatie"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:Model="using:GGzApplicatie.Model"
+    x:Class="GGzApplicatie.Register"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid Background="White">
         <Image x:Name="image" Source="ms-appx:///Assets/GGz_Breburg_Logo.jpg" Margin="0,0,0,475"/>
-        <TextBox x:Name="txtb_Username" Margin="198,182,15,422" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch" BorderBrush="#FF281C6E" Foreground="#FF281C6E" BorderThickness="1.5,1" SelectionHighlightColor="#FF281C6E" Background="White"/>
         <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="85,152,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="10,186,0,0" TextWrapping="Wrap" Text="Client Code" VerticalAlignment="Top" Height="32" Width="188" Foreground="#FFEE7114" FontSize="21.333"/>
-        <TextBox x:Name="txtb_Username_Copy" Margin="198,243,15,361" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch" BorderBrush="#FF281C6E" Foreground="#FF281C6E" BorderThickness="1.5,1" SelectionHighlightColor="#FF281C6E" Background="White"/>
-        <TextBlock x:Name="textBlock1_Copy" HorizontalAlignment="Left" Margin="10,247,0,0" TextWrapping="Wrap" Text="Gebruikersnaam" VerticalAlignment="Top" Height="32" Width="188" Foreground="#FFEE7114" FontSize="21.333"/>
-        <TextBox x:Name="txtb_Username_Copy1" Margin="198,303,15,301" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch" BorderBrush="#FF281C6E" Foreground="#FF281C6E" BorderThickness="1.5,1" SelectionHighlightColor="#FF281C6E" Background="White"/>
-        <TextBlock x:Name="textBlock1_Copy1" HorizontalAlignment="Left" Margin="10,307,0,0" TextWrapping="Wrap" Text="Voornaam" VerticalAlignment="Top" Height="32" Width="188" Foreground="#FFEE7114" FontSize="21.333"/>
-        <TextBox x:Name="txtb_Username_Copy2" Margin="198,364,15,240" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch" BorderBrush="#FF281C6E" Foreground="#FF281C6E" BorderThickness="1.5,1" SelectionHighlightColor="#FF281C6E" Background="White"/>
-        <TextBlock x:Name="textBlock1_Copy2" HorizontalAlignment="Left" Margin="10,368,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="32" Width="188" Foreground="#FFEE7114" FontSize="21.333">
-        	<Run Text="Achternaa"/>
-        	<Run Text="m"/>
-        </TextBlock>
-        <TextBox x:Name="txtb_Username_Copy3" Margin="198,425,15,179" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch" BorderBrush="#FF281C6E" Foreground="#FF281C6E" BorderThickness="1.5,1" SelectionHighlightColor="#FF281C6E" Background="White"/>
-        <TextBlock x:Name="textBlock1_Copy3" HorizontalAlignment="Left" Margin="10,429,0,0" TextWrapping="Wrap" Text="Geboortedatum" VerticalAlignment="Top" Height="32" Width="188" Foreground="#FFEE7114" FontSize="21.333"/>
-        <TextBox x:Name="txtb_Username_Copy5" Margin="198,516,15,88" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch" BorderBrush="#FF281C6E" Foreground="#FF281C6E" BorderThickness="1.5,1" SelectionHighlightColor="#FF281C6E" Background="White"/>
-        <TextBlock x:Name="textBlock1_Copy5" HorizontalAlignment="Left" Margin="10,520,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="32" Width="188" Foreground="#FFEE7114" FontSize="21.333" SelectionChanged="textBlock1_Copy5_SelectionChanged">
-        	<Run Text="Wachtwoord"/>
-        	<LineBreak/>
-        	<Run/>
-        </TextBlock>
-        <Button x:Name="btn_Login" Content="Registreren" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="67,0,0,12" Width="266" Height="58" Background="#FFEE7114" BorderBrush="#FFEE7114"/>
+        <TextBox x:Name="txtb_Username" Margin="198,196,15,408" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch" BorderBrush="#FF281C6E" Foreground="#FF281C6E" BorderThickness="1.5,1" SelectionHighlightColor="#FF281C6E" Background="White"/>
+        <TextBlock x:Name="textBlock1_Copy" HorizontalAlignment="Left" Margin="10,201,0,0" TextWrapping="Wrap" Text="Gebruikersnaam" VerticalAlignment="Top" Height="32" Width="188" Foreground="#FFEE7114" FontSize="21.333"/>
+        <TextBox x:Name="txtb_Name" Margin="198,254,15,350" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch" BorderBrush="#FF281C6E" Foreground="#FF281C6E" BorderThickness="1.5,1" SelectionHighlightColor="#FF281C6E" Background="White"/>
+        <TextBlock x:Name="textBlock1_Copy1" HorizontalAlignment="Left" Margin="10,259,0,0" TextWrapping="Wrap" Text="Voornaam" VerticalAlignment="Top" Height="32" Width="188" Foreground="#FFEE7114" FontSize="21.333"/>
+        <TextBox x:Name="txtb_Surname" Margin="198,311,15,293" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch" BorderBrush="#FF281C6E" Foreground="#FF281C6E" BorderThickness="1.5,1" SelectionHighlightColor="#FF281C6E" Background="White"/>
+        <TextBlock x:Name="textBlock1_Copy2" HorizontalAlignment="Left" Margin="10,315,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="32" Width="188" Foreground="#FFEE7114" FontSize="21.333" Text="Achternaam"/>
+        <TextBlock x:Name="textBlock1_Copy3" HorizontalAlignment="Left" Margin="10,370,0,0" TextWrapping="Wrap" Text="Geboortedatum" VerticalAlignment="Top" Height="32" Width="188" Foreground="#FFEE7114" FontSize="21.333"/>
+        <Button x:Name="btn_RegisterAccount" Content="Voltooien" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="67,0,0,12" Width="266" Height="58" Background="#FFEE7114" BorderBrush="#FFEE7114" Click="btn_RegisterAccount_Click"/>
         <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="85,466,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-        <TextBlock x:Name="textBlock2_Copy" Margin="22,485,3,0" TextWrapping="Wrap" Text="laat uw begeleider het wachtwoord invullen " VerticalAlignment="Top" Height="45" Foreground="#FF281C6E" FontSize="18.667"/>
-        <TextBlock x:Name="textBlock2_Copy1" Margin="10,132,15,0" TextWrapping="Wrap" Text="voer uw gegevens in om een account aan te maken" VerticalAlignment="Top" Height="45" Foreground="#FF281C6E" FontSize="18.667" TextAlignment="Center" SelectionChanged="textBlock2_Copy1_SelectionChanged"/>
+        <TextBlock x:Name="textBlock2_Copy" Margin="15,484,10,0" TextWrapping="Wrap" Text="laat uw begeleider het scherm controleren." VerticalAlignment="Top" Height="45" Foreground="#FF281C6E" FontSize="18.667"/>
+        <TextBlock x:Name="textBlock2_Copy1" Margin="10,132,15,0" TextWrapping="Wrap" Text="voer uw gegevens in om een account aan te maken" VerticalAlignment="Top" Height="45" Foreground="#FF281C6E" FontSize="18.667" TextAlignment="Center"/>
+        <TextBlock x:Name="textBlock1_Copy4" HorizontalAlignment="Left" Margin="10,425,0,0" TextWrapping="Wrap" Text="Behandelaar" VerticalAlignment="Top" Height="32" Width="188" Foreground="#FFEE7114" FontSize="21.333"/>
+        <ComboBox x:Name="cmb_AdminUsernames" HorizontalAlignment="Left" Margin="198,415,0,0" VerticalAlignment="Top" Width="187" Height="45" BorderBrush="#FF281C6E" Foreground="#FF281C6E" BorderThickness="1.5,1" Background="White"/>
+        <DatePicker x:Name="dtp_Birthday" HorizontalAlignment="Left" Margin="198,360,0,0" VerticalAlignment="Top" Width="187" Height="50" Foreground="#FF281C6E" BorderThickness="1.5,1" Background="White" DayFormat="{}{day.integer}"/>
     </Grid>
 </Page>
