--- a/Solution/GGzApplicatie/GGzApplicatie/Views/TestPage.xaml
+++ b/Solution/GGzApplicatie/GGzApplicatie/Views/TestPage.xaml
@@ -9,12 +9,12 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid Background="White">
-        <Button x:Name="btn_Login" Content="Registreren" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,182" Width="177" Height="60" Background="#FFEE7114" BorderBrush="#FFEE7114"/>
-        <Button x:Name="btn_Login_Copy" Content="Registreren" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,112" Width="177" Height="60" Background="#FFEE7114" BorderBrush="#FFEE7114" />
-        <Button x:Name="btn_Login_Copy1" Content="Registreren" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,35" Width="177" Height="60" Background="#FFEE7114" BorderBrush="#FFEE7114" />
-        <Button x:Name="btn_Login_Copy2" Content="Registreren" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="213,0,0,182" Width="177" Height="60" Background="#FFEE7114" BorderBrush="#FFEE7114" />
-        <Button x:Name="btn_Login_Copy3" Content="Registreren" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="213,0,0,112" Width="177" Height="60" Background="#FFEE7114" BorderBrush="#FFEE7114"/>
-        <Button x:Name="btn_Login_Copy4" Content="Registreren" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="213,0,0,35" Width="177" Height="60" Background="#FFEE7114" BorderBrush="#FFEE7114"/>
+        <Button x:Name="btn_Login" Content="Zeer Slecht&#xD;&#xA;" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,182" Width="177" Height="60" Background="#FFEE7114" BorderBrush="#FFEE7114"/>
+        <Button x:Name="btn_Login_Copy" Content="Normaal" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,112" Width="177" Height="60" Background="#FFEE7114" BorderBrush="#FFEE7114" />
+        <Button x:Name="btn_Login_Copy1" Content="Zeer Goed" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,0,0,35" Width="177" Height="60" Background="#FFEE7114" BorderBrush="#FFEE7114" />
+        <Button x:Name="btn_Login_Copy2" Content="Slecht" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="213,0,0,182" Width="177" Height="60" Background="#FFEE7114" BorderBrush="#FFEE7114" />
+        <Button x:Name="btn_Login_Copy3" Content="Goed" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="213,0,0,112" Width="177" Height="60" Background="#FFEE7114" BorderBrush="#FFEE7114"/>
+        <Button x:Name="btn_Login_Copy4" Content="N.V.T" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="213,0,0,35" Width="177" Height="60" Background="#FFEE7114" BorderBrush="#FFEE7114"/>
         <TextBlock x:Name="textBlock2" Margin="10,231,10,0" TextWrapping="Wrap" Text="Is dit een voorbeeld vraag?" VerticalAlignment="Top" Height="171" Foreground="#FF281C6E" FontSize="26.667" SelectionChanged="textBlock2_SelectionChanged" TextAlignment="Center"/>
         <Image x:Name="image" Source="ms-appx:///Assets/GGz_Breburg_Logo.jpg" Margin="0,0,0,475"/>
         <TextBlock x:Name="textBlock2_Copy" Margin="79,142,79,0" TextWrapping="Wrap" Text="11/50" VerticalAlignment="Top" Height="84" Foreground="#FF281C6E" FontSize="26.667" SelectionChanged="textBlock2_SelectionChanged" TextAlignment="Center"/>
