--- a/Solution/GGzApplicatie/GGzApplicatie/Views/UserMenuPage.xaml
+++ b/Solution/GGzApplicatie/GGzApplicatie/Views/UserMenuPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="GGzApplicatie.Views.MenuPage"
+    x:Class="GGzApplicatie.Views.UserMenuPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:GGzApplicatie"
@@ -14,6 +14,7 @@
         <Button x:Name="btn_MyResults" Content="Mijn resultaten" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="77,0,0,305" Width="266" Height="58" Background="#FFEE7114" BorderBrush="#FFEE7114" Click="btn_MyResults_Click"/>
         <Button x:Name="btn_MyInformation" Content="Mijn gegevens" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="77,0,0,209" Width="266" Height="58" Background="#FFEE7114" BorderBrush="#FFEE7114" Click="btn_MyInformation_Click"/>
         <Button x:Name="btn_Logout" Content="Uitloggen" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="77,0,0,26" Width="266" Height="58" Background="#FFEE7114" BorderBrush="#FFEE7114" Click="btn_Logout_Click"/>
+        <TextBlock x:Name="lbl_Welcome" Margin="10,135,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="45" Foreground="#FF281C6E" FontSize="18.667" TextAlignment="Center"/>
 
     </Grid>
 </Page>
